[gd_scene load_steps=5 format=3 uid="uid://bbheqfk16k75x"]

[ext_resource type="Script" path="res://Scripts/MenuScripts/menu.gd" id="1_piaib"]
[ext_resource type="Theme" uid="uid://gmjysn315cso" path="res://Assets/Buttons/DefaultButton.tres" id="2_0sf5t"]
[ext_resource type="Texture2D" uid="uid://caxtbt4ne30u7" path="res://Assets/logo/logo.png" id="3_lawa3"]
[ext_resource type="AudioStream" uid="uid://m8o5ifmljf2k" path="res://Assets/Music/ButtonClick.wav" id="4_pmejo"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_piaib")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = 230.0
offset_right = -148.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0sf5t")
text = "Play"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0sf5t")
text = "Quit"
icon_alignment = 1

[node name="Opsim-removebg-preview(1)" type="Sprite2D" parent="."]
position = Vector2(592, 296)
texture = ExtResource("3_lawa3")

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pmejo")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 761.0
offset_top = 543.0
offset_right = 873.0
offset_bottom = 605.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="DeckBuilder" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0sf5t")
text = "Decks"

[node name="Options" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0sf5t")
text = "Options"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/DeckBuilder" to="." method="_on_deck_builder_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Options" to="." method="_on_options_pressed"]
